core/roboconf-core/src/test/resources/configurations/invalid/instanceof-very-imbricated-missing-opening-cb.instances
instance of wrapper {
	instance of vm {
		name: my-vm;
		
		instance of
			name: server1;
		}
	}
}